--- a/WebHooksService/WebHooksService/WebHooksService.csproj
+++ b/WebHooksService/WebHooksService/WebHooksService.csproj
@@ -6,4 +6,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NetEscapades.Configuration.Yaml" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="configuration.yaml" />
+    <Content Include="web-hooks.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
