Add user secrets and move local web hooks configuration there

--- a/WebHooksService/WebHooksService.csproj
+++ b/WebHooksService/WebHooksService.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b8b3b455-f1f3-4157-bcec-21492ebb9cef</UserSecretsId>
   </PropertyGroup>
 
 </Project>
